<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_android_wear_notification_needs_update_text">%1$s requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"%1$s won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="about">About</string>
    <string name="accept">Accept</string>
    <string name="action_mode_drag_pivot">"Drag blue dots to move figures around.
Drag red dots to pose figures."</string>
    <string name="action_mode_flip">Tap purple dots to flip figures horizontally.</string>
    <string name="action_mode_modify_stretch">"Tap teal dots to change the color and size of figures.
Drag orange dots to stretch figures."</string>
    <string name="action_mode_reflect">Flip</string>
    <string name="action_mode_stretch_modify">Modify &amp; stretch</string>
    <string name="action_mode_translate_pivot">Drag &amp; pivot</string>
    <string name="animation_description">"Create your first animation
by tapping the "<b>+</b> button</string>
    <string name="animations">Animations</string>
    <string name="app_name">Stick Fighter</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply">Apply</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="cancel">Cancel</string>
    <string name="change_background">Change background color</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="close">Close</string>
    <string name="color">Color</string>
    <string name="content_description_action_mode">Action mode</string>
    <string name="content_description_decrease_size">Decrease size</string>
    <string name="content_description_edit_frame">Edit</string>
    <string name="content_description_increase_size">Increase size</string>
    <string name="content_description_open_custom_figure">Open</string>
    <string name="content_description_open_sequence">Open</string>
    <string name="content_description_play_pause">Play/Pause</string>
    <string name="content_description_settings">Settings</string>
    <string name="copy">Copy</string>
    <string name="create">Create</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="create_folder_error">Failed to create folder</string>
    <string name="creating_video">Encoding animation to a video file. This may take several minutes.</string>
    <string name="custom_figure_deleted">%1$s has been deleted.</string>
    <string name="custom_figure_description">"Custom figures can be
used in your animations
like stock figures"</string>
    <string name="custom_figures">Custom figures</string>
    <string name="decline">Decline</string>
    <string name="delete">Delete</string>
    <string name="delete_custom_figure_confirmation">Are you sure you wanted to delete this custom figure? This cannot be undone.</string>
    <string name="delete_sequence_confirmation">Are you sure you wanted to delete this animation? This cannot be undone.</string>
    <string name="enter_custom_figure_name">Enter a name for the figure</string>
    <string name="enter_sequence_name">Enter a title for the animation</string>
    <string name="error_no_custom_name">You must enter a name</string>
    <string name="error_no_sequence_title">You must enter a title</string>
    <string name="export_animation">Save backup</string>
    <string name="export_finished">Your animation has been saved to:</string>
    <string name="exporting_animation">Creating a backup. This may take several minutes.</string>
    <string name="frame_copied">Frame copied at position %d</string>
    <string name="frame_deleted">Frame deleted at position %d</string>
    <string name="frame_deletion_last">Cannot delete the only remaining frame</string>
    <string name="frames_per_second">Animation smoothness (FPS)</string>
    <string name="help">Help</string>
    <string name="hint_creator">Creator</string>
    <string name="hint_custom_figure_name">Name</string>
    <string name="hint_description">Description</string>
    <string name="hint_sequence_title">Title</string>
    <string name="hint_title">Title</string>
    <string name="import_animation">Import animation…</string>
    <string name="import_finished">Your animation:</string>
    <string name="importing_animation">Importing animation from backup file. This may take several minutes.</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-2296282175740473/3223430740</string>
    <string name="key_frames_per_second">Animation speed</string>
    <string name="loading_frames">Loading frames…</string>
    <string name="minimum_frames_to_create_video">Create at least 2 frames before saving as a video</string>
    <string name="minimum_frames_to_play_video">Create at least 2 frames before playing your animation</string>
    <string name="name">Name</string>
    <string name="new_folder">New folder</string>
    <string name="no_custom_figures">No custom figures found</string>
    <string name="no_custom_figures_created_yet">(Empty)</string>
    <string name="no_sequences">No animations found</string>
    <string name="open">Open</string>
    <string name="open_imported_animation">has been successfully imported. Would you like to open it?</string>
    <string name="percent_mark">%</string>
    <string name="play">Play</string>
    <string name="play_loading_frames">Buffering…</string>
    <string name="repeat">Repeat</string>
    <string name="save_as_video">Save video</string>
    <string name="select_something_first">Please select something first</string>
    <string name="sequence_deleted">%1$s has been deleted.</string>
    <string name="share">Share</string>
    <string name="share_backup">Would you like to share it?</string>
    <string name="size">Size</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="store_picture_title">Save image</string>
    <string name="video_creation_finished">Your video file has been saved to:</string>
    <string name="video_quality_1080p">1920x1080 (1080p)</string>
    <string name="video_quality_480p">720x480 (480p)</string>
    <string name="video_quality_720p">1280x720 (720p)</string>
    <string name="video_quality_cif">352x288 (CIF)</string>
    <string name="video_quality_qcif">176x144 (QCIF)</string>
    <string name="video_quality_qvga">320x240 (QVGA)</string>
    <string name="video_resolution">Quality</string>
</resources>
