<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditText android:id="@id/titleEditText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/hint_title" />
    <EditText android:id="@id/creatorEditText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/hint_creator" android:layout_below="@id/titleEditText" />
    <EditText android:id="@id/descriptionEditText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/hint_description" android:layout_below="@id/creatorEditText" />
    <android.support.design.widget.FloatingActionButton android:id="@id/fab" android:src="@drawable/ic_save_white_24dp" app:elevation="4.0dip" style="@style/FloatingActionButton" />
</RelativeLayout>