<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:layout_width="@dimen/modify_figure_dialog_width" android:layout_height="wrap_content" android:animateLayoutChanges="true">
        <RelativeLayout android:id="@id/importingContainer" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/text_size_medium_small" android:textColor="@color/text_primary" android:id="@id/importingLabelTextView" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/importing_animation" />
            <ProgressBar android:id="@id/progressBarImporting" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="4.0dip" android:max="100" android:progress="0" android:indeterminate="false" android:layout_below="@id/importingLabelTextView" style="@style/MaterialProgressBarHorizontal" />
            <Button android:textSize="14.0sp" android:textColor="@color/accent" android:gravity="center" android:id="@id/cancelButton" android:background="?selectableItemBackground" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="16.0dip" android:layout_marginBottom="4.0dip" android:minWidth="48.0dip" android:minHeight="48.0dip" android:text="@string/cancel" android:layout_below="@id/progressBarImporting" android:layout_alignParentRight="true" android:textAllCaps="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/finishedContainer" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:id="@id/labelContainer" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip">
                <TextView android:textSize="@dimen/text_size_medium_small" android:textColor="@color/text_primary" android:padding="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/import_finished" />
                <TextView android:textSize="@dimen/text_size_tiny" android:textColor="@color/text_primary" android:id="@id/finishedLabelTextView" android:padding="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="4.0dip" />
                <TextView android:textSize="@dimen/text_size_medium_small" android:textColor="@color/text_primary" android:padding="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/open_imported_animation" />
            </LinearLayout>
            <Button android:textSize="14.0sp" android:textColor="@color/accent" android:gravity="center" android:id="@id/openButton" android:background="?selectableItemBackground" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="0.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="4.0dip" android:minWidth="48.0dip" android:text="@string/open" android:layout_below="@id/labelContainer" android:layout_alignParentRight="true" android:textAllCaps="true" />
            <Button android:textSize="14.0sp" android:textColor="@color/accent" android:gravity="center" android:id="@id/closeButton" android:background="?selectableItemBackground" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="0.0dip" android:layout_marginRight="8.0dip" android:minWidth="48.0dip" android:minHeight="48.0dip" android:text="@string/close" android:layout_toLeftOf="@id/openButton" android:layout_alignBottom="@id/openButton" android:textAllCaps="true" />
        </RelativeLayout>
    </FrameLayout>
</FrameLayout>