<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:layout_width="@dimen/modify_figure_dialog_width" android:layout_height="wrap_content" android:animateLayoutChanges="true">
        <RelativeLayout android:id="@id/videoSettingsContainer" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <RelativeLayout android:id="@id/videoSettingsInnerContainer" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/text_size_tiny" android:textColor="@color/text_secondary" android:id="@id/resolutionTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/video_resolution" />
                <Spinner android:id="@id/videoQualitySpinner" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_below="@id/resolutionTextView" />
                <TextView android:textSize="@dimen/text_size_tiny" android:textColor="@color/text_secondary" android:id="@id/keyFpsLabelTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/key_frames_per_second" android:layout_below="@id/videoQualitySpinner" android:layout_alignLeft="@id/videoQualitySpinner" />
                <TextView android:id="@id/keyFpsValueTextView" android:layout_below="@id/keyFpsLabelTextView" style="@style/VideoSettingValueTextView" />
                <SeekBar android:id="@id/keyFpsSeekBar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:layout_toLeftOf="@id/keyFpsValueTextView" android:layout_below="@id/keyFpsLabelTextView" android:layout_alignLeft="@id/keyFpsLabelTextView" />
            </RelativeLayout>
            <Button android:textSize="14.0sp" android:textColor="@color/accent" android:gravity="center" android:id="@id/createButton" android:background="?selectableItemBackground" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="0.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="4.0dip" android:minWidth="48.0dip" android:text="@string/create" android:layout_below="@id/videoSettingsInnerContainer" android:layout_alignParentRight="true" android:textAllCaps="true" />
            <Button android:textSize="14.0sp" android:textColor="@color/accent" android:gravity="center" android:id="@id/cancelInitialButton" android:background="?selectableItemBackground" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="0.0dip" android:layout_marginRight="8.0dip" android:minWidth="48.0dip" android:minHeight="48.0dip" android:text="@string/cancel" android:layout_toLeftOf="@id/createButton" android:layout_alignBottom="@id/createButton" android:textAllCaps="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/creatingContainer" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/text_size_medium_small" android:textColor="@color/text_primary" android:id="@id/creatingLabelTextView" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/creating_video" />
            <ProgressBar android:id="@id/progressBarCreatingVideo" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="4.0dip" android:max="100" android:progress="0" android:indeterminate="false" android:layout_below="@id/creatingLabelTextView" style="@style/MaterialProgressBarHorizontal" />
            <Button android:textSize="14.0sp" android:textColor="@color/accent" android:gravity="center" android:id="@id/cancelCreatingButton" android:background="?selectableItemBackground" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="0.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="4.0dip" android:minWidth="48.0dip" android:text="@string/cancel" android:layout_below="@id/progressBarCreatingVideo" android:layout_alignParentRight="true" android:textAllCaps="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/finishedContainer" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:id="@id/labelContainer" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip">
                <TextView android:textSize="@dimen/text_size_medium_small" android:textColor="@color/text_primary" android:padding="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/video_creation_finished" />
                <TextView android:textSize="@dimen/text_size_tiny" android:textColor="@color/text_secondary" android:id="@id/finishedLabelTextView" android:padding="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="4.0dip" />
                <TextView android:textSize="@dimen/text_size_medium_small" android:textColor="@color/text_primary" android:padding="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/share_backup" />
            </LinearLayout>
            <Button android:textSize="14.0sp" android:textColor="@color/accent" android:gravity="center" android:id="@id/shareButton" android:background="?selectableItemBackground" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="0.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="4.0dip" android:minWidth="48.0dip" android:text="@string/share" android:layout_below="@id/labelContainer" android:layout_alignParentRight="true" android:textAllCaps="true" />
            <Button android:textSize="14.0sp" android:textColor="@color/accent" android:gravity="center" android:id="@id/closeButton" android:background="?selectableItemBackground" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="0.0dip" android:layout_marginRight="8.0dip" android:minWidth="48.0dip" android:minHeight="48.0dip" android:text="@string/close" android:layout_toLeftOf="@id/shareButton" android:layout_alignBottom="@id/shareButton" android:textAllCaps="true" />
        </RelativeLayout>
    </FrameLayout>
</FrameLayout>